--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,65 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url("https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
+
+:root {
+  --primary-color: white;
+  --primary-flat-btn-color: white;
+  --primary-flat-btn-border-color: black;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+
+
+/* Basic */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  font-family: "Arial", sans-serif;
+  -webkit-font-smoothing: antialiased;
+
+  background-color: var(--primary-color);
+
+  background-image: url("./assets/res/bg-divider.png");
+  background-attachment: fixed;
+  background-repeat: repeat-y;
+  background-size: 0.1%;
+  background-position: center;
+}
+
+::-webkit-scrollbar {
+  display: none;
+  width: 0;
+}
+
+
+
+/* Universal Classes */
+.flat-btn {
+  background-color: var(--primary-flat-btn-color);
+  border: 1px solid var(--primary-flat-btn-border-color);
+}
+
+
+
+/* Fonts */
+.cormorant-li {
+  font-family: "Cormorant Garamond", serif;
+  font-weight: 300;
+  font-style: italic;
+}
+
+.cormorant-ri {
+  font-family: "Cormorant Garamond", serif;
+  font-weight: 400;
+  font-style: italic;
+}
+
+.montserrat-regular {
+  font-family: "Montserrat", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 300;
+  font-style: normal;
 }
