--- a/src/index.css
+++ b/src/index.css
@@ -3,8 +3,21 @@
 
 :root {
   --primary-color: white;
+  --primary-text-color: black;
+
+
+  /* Timings */
+  --primary-transition-timing: 0.2s;
+  --primary-transition-scale: 1.2;
+  
+
+  /* Flat button */
   --primary-flat-btn-color: white;
   --primary-flat-btn-border-color: black;
+  --primary-flat-btn-text-color: black;
+  --secondary-flat-btn-color: black;
+  --secondary-flat-btn-border-color: black;
+  --secondary-flat-btn-text-color: white;
 }
 
 
@@ -21,6 +34,7 @@ body {
   -webkit-font-smoothing: antialiased;
 
   background-color: var(--primary-color);
+  color: var(--primary-text-color);
 
   background-image: url("./assets/res/bg-divider.png");
   background-attachment: fixed;
@@ -40,6 +54,18 @@ body {
 .flat-btn {
   background-color: var(--primary-flat-btn-color);
   border: 1px solid var(--primary-flat-btn-border-color);
+  border-radius: 0;
+
+  color: var(--primary-flat-btn-text-color);
+  font-family: "Montserrat", sans-serif;
+
+  transition: background-color var(--primary-transition-timing), color var(--primary-transition-timing);
+}
+.flat-btn:hover {
+  background-color: var(--secondary-flat-btn-color);
+  border: 1px solid var(--secondary-flat-btn-border-color);
+
+  color: var(--secondary-flat-btn-text-color);
 }
 
 
