--- a/src/components/HomePage/Header.module.css
+++ b/src/components/HomePage/Header.module.css
@@ -2,9 +2,12 @@ header {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   height: 10%;
-  background: transparent;
-}
+  background: var(--primary-color);
 
+  position: sticky;
+  top: 0%;
+  z-index: 999;
+}
 
 /* Header Nav */
 nav > ul {
@@ -37,12 +40,11 @@ nav > ul > li:hover {
 
   background: var(--primary-color);
   width: 6.5rem;
-  height: 7rem;
   border-radius: 50%;
 }
 
 #logo {
-  width: 145%;
+  width: 135%;
   margin-top: 1%;
 }
 
@@ -57,27 +59,6 @@ nav > ul > li:hover {
   font-family: "Montserrat", sans-serif;
   padding: 2%;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 .cormorant {
   font-family: "Cormorant Garamond", serif;
