--- a/src/components/HomePage/Main.module.css
+++ b/src/components/HomePage/Main.module.css
@@ -1,15 +1,18 @@
 main {
   display: grid;
   justify-items: center;
-
-  border: 2px solid aqua;
 }
 
 section {
   margin-bottom: 3em;
 
   width: 80%;
-  border: 2px solid aqua;
+  /* border: 2px solid aqua; */
+}
+
+hr {
+  width: 80%;
+  margin-top: 6rem;
 }
 
 /* Intro Section */
@@ -42,7 +45,25 @@ section {
 }
 
 /* Bestsellers Section */
+#bestsellers {
+  display: grid;
+  justify-items: center;
+}
 
+#bestsellers > h1 {
+  padding: 3rem 0rem;
+
+  font-family: "Montserrat", sans-serif;
+  font-weight: 400;
+  font-size: 3.5rem;
+}
+
+#bestseller_card_wrapper {
+  display: flex;
+  justify-content: space-between;
+
+  width: 100%;
+}
 
 /* Motto Section */
 #motto {
