--- a/src/components/ui/ImageCard.module.css
+++ b/src/components/ui/ImageCard.module.css
@@ -1,9 +1,10 @@
 #card {
-    height: 33rem;
+    /* height: 33rem; */
     width: 22rem;
 
     display: grid;
     justify-items: center;
+    overflow: hidden;
 
     transition: transform var(--primary-transition-timing);
 }
