--- a/src/components/HomePage/Main.module.css
+++ b/src/components/HomePage/Main.module.css
@@ -1,120 +1,14 @@
-main {
+#main {
   display: grid;
   justify-items: center;
 }
 
 section {
   margin-bottom: 3em;
-
   width: 80%;
-  /* border: 2px solid aqua; */
 }
 
 hr {
   width: 80%;
   margin-top: 6rem;
-}
-
-/* Intro Section */
-#intro_quote {
-  margin-top: 3rem;
-  padding: 3rem 0rem;
-
-  font-family: "Cormorant Garamond", serif;
-  font-weight: 400;
-  font-size: 6.4rem;
-}
-
-#intro_quote > span {
-  font-weight: 700;
-}
-
-#intro_phrase {
-  margin-bottom: 4.5rem;
-
-  font-family: "Cormorant Garamond", serif;
-  font-weight: lighter;
-  font-size: 2.1rem;
-  font-style: italic;
-}
-
-#intro > button {
-  padding: 1rem 4rem;
-
-  font-size: 1.05rem;
-}
-
-/* Bestsellers Section */
-#bestsellers {
-  display: grid;
-  justify-items: center;
-}
-
-#bestsellers > h1 {
-  padding: 4rem 0rem;
-
-  font-family: "Montserrat", sans-serif;
-  font-weight: 400;
-  font-size: 3.5rem;
-}
-
-#bestseller_card_wrapper {
-  display: flex;
-  justify-content: space-between;
-
-  width: 100%;
-}
-
-/* Motto Section */
-#motto {
-  display: grid;
-  justify-items: center;
-
-  text-align: center;
-}
-
-#motto_quote {
-  /* margin-top: 3rem; */
-  padding: 2.5rem 0rem;
-
-  font-family: "Cormorant Garamond", serif;
-  font-weight: 400;
-  font-size: 3.5rem;
-  font-style: italic;
-}
-
-#motto_phrase {
-  margin-bottom: 4.5rem;
-  padding: 1rem 0rem;
-
-  font-family: "Montserrat", sans-serif;
-  font-weight: 200;
-  font-size: 1.2rem;
-}
-
-#motto > button {
-  padding: 1rem 4rem;
-
-  font-size: 1.05rem;
-}
-
-/* New Arrivals Section */
-#newarrivals {
-  display: grid;
-  justify-items: center;
-}
-
-#newarrivals > h1 {
-  padding: 4rem 0rem;
-
-  font-family: "Montserrat", sans-serif;
-  font-weight: 400;
-  font-size: 3.5rem;
-}
-
-#newarrival_card_wrapper {
-  display: flex;
-  justify-content: space-between;
-
-  width: 100%;
 }
