--- a/src/components/HomePage/BestsellersSection.module.css
+++ b/src/components/HomePage/BestsellersSection.module.css
@@ -1,20 +1,30 @@
 /* Bestsellers Section */
 #bestsellers {
-    display: grid;
-    justify-items: center;
-  }
-  
-  #bestsellers > h1 {
-    padding: 4rem 0rem;
-  
-    font-family: "Montserrat", sans-serif;
-    font-weight: 400;
-    font-size: 3.5rem;
-  }
-  
-  #bestseller_card_wrapper {
-    display: flex;
-    justify-content: space-between;
-  
-    width: 100%;
-  }
+  display: grid;
+  justify-items: center;
+}
+
+#bestsellers > h1 {
+  padding: 4rem 0rem;
+  padding-bottom: 0.9rem;
+
+  font-family: "Montserrat", sans-serif;
+  font-weight: 400;
+  font-size: 3.5rem;
+}
+
+#view_all {
+  margin-bottom: 2.5rem;
+
+  font-family: "Montserrat", sans-serif;
+  font-size: 0.85rem;
+  letter-spacing: 2px;
+  text-decoration: underline;
+}
+
+#bestseller_card_wrapper {
+  display: flex;
+  justify-content: space-between;
+
+  width: 90%;
+}
