--- a/src/components/ShopPage/Main.module.css
+++ b/src/components/ShopPage/Main.module.css
@@ -1,14 +1,36 @@
 #main {
   display: grid;
-  justify-items: center;
 }
 
 section {
-  margin-bottom: 3em;
-  width: 80%;
+  margin-bottom: 3rem;
+  /* width: 80%; */
 }
 
-hr {
-  width: 80%;
-  margin-top: 6rem;
+#item_category_info {
+  display: grid;
+  grid-template-columns: 1fr 4fr;
+  margin-bottom: 0.5rem;
+
+  font-size: 2.5rem;
+}
+
+#item_section {
+  display: grid;
+  grid-template-columns: 1fr 4fr;
+}
+
+#items {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  overflow: hidden;
+}
+
+#filter {
+  padding-left: 0.3rem;
+}
+
+#filter_head {
+  font-size: 1.5rem;
+  text-decoration: none;
 }
