--- a/src/components/ShopPage/Main.module.css
+++ b/src/components/ShopPage/Main.module.css
@@ -46,3 +46,8 @@ section {
     grid-template-columns: repeat(4, 1fr);
   }
 }
+@media only screen and (max-width: 450px) {
+  #items {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
