--- a/src/components/ui/ItemCard.module.css
+++ b/src/components/ui/ItemCard.module.css
@@ -51,12 +51,15 @@
     height: 12rem;
   }
 }
-@media only screen and (max-width: 850px) {
+@media only screen and (max-width: 700px) {
   #card {
-    width: 6rem;
+    width: 8rem;
+  }
+  #card > span {
+    font-size: 0.4rem;
   }
   #image_wrapper {
-    height: 7rem;
+    height: 10rem;
   }
 }
 @media only screen and (max-width: 450px) {
@@ -64,7 +67,7 @@
     width: 10rem;
   }
   #card > span {
-    font-size: 0.4rem;
+    font-size: 0.6rem;
   }
   #image_wrapper {
     height: 12rem;
