--- a/src/components/ui/ItemCard.module.css
+++ b/src/components/ui/ItemCard.module.css
@@ -64,12 +64,12 @@
 }
 @media only screen and (max-width: 450px) {
   #card {
-    width: 10rem;
+    width: 49vw;
   }
   #card > span {
     font-size: 0.6rem;
   }
   #image_wrapper {
-    height: 12rem;
+    height: 60vw;
   }
 }
